ENHANCEMENT: File/Image UI fixes
* Replaced cancel/delete button in files area
* Consolidated Image upload styles with AssetUpload styles
* Changed name of step 2 in image upload
* Made image editing hidden by default, so multiple files can be seen,
and added ability top open and close
* Tweaked styles in on page upload field (status colour and file name
width)

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1450,61 +1450,7 @@ body.cms-dialog {
 
 	.ss-uploadfield-editandorganize {
 		display: none;
-	}
-
-	// TODO Consolidate with .assetuploadfield and .ss-uploadfield styles
-	.ss-htmleditorfield-file {
-		border: 1px solid lighten($color-medium-separator, 20%);
-		@include border-radius(5px);
-		@include background-clip(padding-box);
-		background: #E2E2E2;
-		margin-bottom: $grid-x*2;
-
-		&.loading {
-			width: 100%;
-			height: 100px;
-			background-image: url(../images/spinner.gif);
-			background-position: 50% 50%;
-			background-repeat: no-repeat;
-		}
-
-		.overview {
-			background-color: #5db4df;
-			@include background-image(linear-gradient(top,  #5db4df 0%,#5db1dd 8%,#439bcb 50%,#3f99cd 54%,#207db6 96%,#1e7cba 100%));
-
-			.thumbnail {
-				display: inline-block;
-				vertical-align: middle;
-				padding: $grid-x/2;
-
-				img {
-					max-height: $grid-x*3;
-				}
-			}
-
-			.title {
-				display: inline-block;
-				vertical-align: middle;
-				background: #fff;
-				border: 1px solid lighten($color-medium-separator, 20%);
-				@include border-radius(5px);
-				margin-left: $grid-x*2;
-				padding: $grid-x/2;
-			}
-
-			.action-delete {
-				float:right;
-				padding:$grid-x;
-				background:none;
-				border:none;
-			}
-		}
-
-		.details {
-			padding: $grid-x*2;
-		}
-	}
-	
+	}	
 }
 
 /** --------------------------------------------
@@ -1633,7 +1579,7 @@ form.small {
 		span.btn-icon-download-csv {
 			height:17px; //exact height of icon
 		}
-		span.ui-button-text {
+		.ui-button-text {
 			padding-left:26px; //to accomodate wider export icon
 		} 
  	}
@@ -1804,7 +1750,7 @@ form.import-form {
 /** --------------------------------------------
  * Buttons for FileUpload
  * -------------------------------------------- */
-span.toggle-details{	
+.toggle-details{	
 	.toggle-details-icon {
 		background: sprite($sprites32, menu-arrow-down) no-repeat;
 		.fileOverview &{
